<resources>
    <string name="app_name">Exam corner</string>
    <string name="register">Let\'s Register</string>
    <string name="welcome">Welcome to Exam corner</string>
    <string name="login">Log in</string>
    <string name="facing">Facing problem in signing in ? Call Us</string>
    <string name="back">Back</string>
    <string name="lets">Let\'s Login</string>
    <string name="forgot">Forgot password? Reset</string>
    <string name="registers">Register</string>
    <string name="download">Downloads</string>
    <string name="mypurchaqse">My Purchases</string>
    <string name="timetable">My Timetable</string>
    <string name="setting">Settings</string>
    <string name="share">Share Now</string>
    <string name="rate">Rate Us</string>
    <string name="Help">Help and Feedback</string>
    <string name="logout">Logout</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="home">Home</string>
    <string name="Helps">Help</string>
    <string name="google">Google</string>
    <string name="fb">Facebook</string>
    <string name="reguired">required</string>
    <string name="invalidemail">invalid email</string>
    <string name="invalidno">invalid no</string>
    <string name="logoutmsg">Do you want to logout</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="nointernet">No internet connection found ! try again with internet connection</string>
    <string name="forget_password">Forgot password</string>
    <string name="submits">Submit Issue</string>
    <string name="descp">Descprition</string>
    <string name="title">Title</string>
    <string name="donwload">Downloads</string>
    <string name="purchase">My Purchases</string>
    <string name="nopurchase">You Have No Purchases</string>
    <string name="timtable">My Timetable</string>
    <string name="notime">You have not timetable</string>
    <string name="save">Save Profile</string>
    <string name="current">Current Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="newpass">New Password</string>
    <string name="change">Change Password</string>
    <string name="batch">parivartan BATCH 2020</string>
    <string name="classes">Live Classes</string>
    <string name="pg3">34 se jayda courses ka ek package</string>
    <string name="pg2">PDF Notes</string>
    <string name="pg4">UP ki bharti</string>
    <string name="buy">Buy Now</string>

</resources>
