<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                app:cardCornerRadius="@dimen/padding1"
                android:layout_margin="@dimen/margin1">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/layoutimg"
                        android:src="@drawable/images2"
                        android:padding="@dimen/padding1"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center|start"
                        android:layout_margin="@dimen/margin2"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/batchtitle"
                            android:padding="@dimen/padding1"
                            android:theme="@style/title"
                            android:text="@string/batch"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/pg1"
                            android:padding="@dimen/padding1"
                            android:theme="@style/title"
                            android:text="@string/classes"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/pg2"
                            android:padding="@dimen/padding1"
                            android:theme="@style/title"
                            android:text="@string/pg2"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/pg3"
                            android:padding="@dimen/padding1"
                            android:theme="@style/title"
                            android:text="@string/pg3"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/pg4"
                            android:padding="@dimen/padding1"
                            android:theme="@style/descp"
                            android:text="@string/pg4"/>


                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/save"
                            android:theme="@style/btnlog"
                            android:text="@string/buy"
                            android:background="@drawable/btnlog"
                            android:layout_marginTop="@dimen/margin2"

                            />

                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>