<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".40"
            android:padding="@dimen/padding1"
            android:text="@string/current"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".60"
            android:padding="@dimen/padding1"
            android:id="@+id/currentpass"
            android:theme="@style/general"
            android:background="@drawable/edtback"
            android:inputType="textPassword"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".40"
            android:padding="@dimen/padding1"
            android:text="@string/newpass"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".60"
            android:padding="@dimen/padding1"
            android:id="@+id/newpass"
            android:theme="@style/general"
            android:background="@drawable/edtback"
            android:inputType="textPassword"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".40"
            android:padding="@dimen/padding1"
            android:text="@string/confirm"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight=".60"
            android:padding="@dimen/padding1"
            android:id="@+id/confirmpass"
            android:theme="@style/general"
            android:background="@drawable/edtback"
            android:inputType="textPassword"
            />

    </LinearLayout>





    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/change"
        android:theme="@style/btnlog"
        android:text="@string/change"
        android:background="@drawable/btnlog"
        android:layout_margin="@dimen/margin"

        />

</LinearLayout>
</layout>