<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.Onboard">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logos"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.27"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />


        <TextView
            android:id="@+id/textView2"
            style="@style/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.027"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="@dimen/margin"
            android:layout_marginTop="36dp"
            android:background="@drawable/btnback"
            android:padding="@dimen/padding"
            android:text="@string/register"
            android:theme="@style/btntext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.105"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="26dp" />


        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="@dimen/margin"
            android:layout_marginTop="20dp"
            android:background="@drawable/btnlog"
            android:padding="@dimen/padding"
            android:text="@string/login"
            android:theme="@style/btnlog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register"
            app:layout_constraintVertical_bias="0.053"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="10dp"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            android:id="@+id/btns"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.053"
            tools:layout_editor_absoluteX="10dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/google"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/margin"
                android:layout_marginTop="20dp"
                android:background="@drawable/btnlog"
                android:padding="@dimen/padding2"
                android:text="@string/google"
                android:theme="@style/btnlog"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.053"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="10dp"
                android:layout_weight=".50"
                android:drawableLeft="@drawable/ic_google"
                />

            <TextView
                android:id="@+id/fb"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/margin"
                android:layout_marginTop="20dp"
                android:background="@drawable/btnlog"
                android:padding="@dimen/padding2"
                android:text="@string/fb"
                android:theme="@style/btnlog"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.053"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="10dp"
                android:layout_weight=".50"
                android:drawableLeft="@drawable/ic_facebook"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/facing"
            style="@style/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facing"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btns"
            app:layout_constraintVertical_bias="0.103"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
